--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ body {
     background-repeat: no-repeat;
 }
 
+#trainersprite {
+    position: absolute;
+    bottom: 1px;
+    right: 40px;
+    z-index: 1;
+}
+
 .container {
     padding: 40px;
     margin: 0 auto;
@@ -21,6 +28,7 @@ body {
 #page {
     display: grid;
     grid-template-columns: repeat(3 , 200px);
+    margin: auto;
 }
 
 h1 {
@@ -34,7 +42,8 @@ h1 {
     text-align: center;
 }
 
-#pokedex {
+/*
+ #pokedex {
     margin: 4% 22%;
     display: grid;
     grid-template: repeat(1, 350px)/repeat(3, 200px);
@@ -47,7 +56,7 @@ h1 {
     list-style: none;
     padding: 40px;
     background-color: #f4f4f4;
-    /* background-image: url("pokecard.png"); */
+    background-image: url("pokecard.png"); 
     background-size: cover;
     color: #222;
     text-align: center;
@@ -89,3 +98,4 @@ h1 {
         transform: translateY(0);
     }
 }
+*/
